<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="134dp"
        android:layout_height="119dp"
        android:src="@drawable/teccart_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainLabel_Caption"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/MainPrefUserName_Caption"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/idPrefUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/MainPrefPassword_Caption"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idPrefPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/MainPrefNom_Caption"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idPrefNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/MainPrefPrenom_Caption"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idPrefPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/MainPrefSexe_Caption"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idPrefSexe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/MainPrefDateNaissance_Caption"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idPrefDateNaissance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/MainPrefNumeroTelephone_Caption"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/idPrefNumeroTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/idEffacerDonnees"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
       android:backgroundTint="@color/red"
        android:text="@string/MainButton_Caption"
        android:layout_marginTop="32dp"/>









</LinearLayout>